--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  display: flex;
+  justify-content: space-between;
+}
+.App h1 {
+  background-color: skyblue;
+}
+.App span {
+  background-color: pink;
 }
 
 .App-logo {
