--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,6 @@
 .App {
-  /* text-align: center; */
-  display: flex;
-  justify-content: space-between;
+  text-align: center;
 }
-.App h1 {
-  background-color: skyblue;
-}
-.App span {
-  background-color: pink;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
